# gif-editor

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cargo-sources.json  dev.quinnjr.gif-editor.desktop  dev.quinnjr.gif-editor.metainfo.xml  dev.quinnjr.gif-editor.yml  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
coverage/: clover.xml  coverage-final.json  index.html
coverage/lib/: commands.ts.html  index.html
docs/plans/: 2026-04-04-affine-transforms-design.md  2026-04-04-affine-transforms-plan.md  2026-04-04-frame-deletion-design.md  2026-04-04-frame-deletion-plan.md  2026-04-04-keyframe-animation-design.md  2026-04-04-keyframe-animation-plan.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  compositor.rs  error.rs  export.rs  flare_renderer.rs  font_data.rs  fonts.rs  frame_source.rs  gif_decoder.rs  image_source.rs  layer.rs  lib.rs  main.rs  project.rs  text_renderer.rs  video_decoder.rs
src-tauri/tests/: compositor_test.rs  error_test.rs  export_test.rs  flare_renderer_test.rs  fonts_test.rs  gif_decoder_test.rs  image_source_test.rs  layer_test.rs  project_test.rs  text_renderer_test.rs  undo_test.rs  video_decoder_test.rs
src/lib/: commands.ts  types.ts
src/routes/: +layout.svelte  +page.svelte
src/tests/: LayerPanel.test.ts  Timeline.test.ts  Toolbar.test.ts  canvas-renderer.test.ts  commands.test.ts  drag.test.ts  project-store.test.ts  (+1 more)
(+20 files in other folders)
