[package]
name = "gif-editor"
version = "0.1.0"
edition = "2024"

[lib]
name = "gif_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gif = "0.13"
image = { version = "0.25", features = ["gif", "png", "jpeg"] }
ab_glyph = "0.2"
imagequant = "4"
uuid = { version = "1", features = ["v4", "serde"] }
lru = "0.12"
tempfile = "3"
thiserror = "2"
